packages/experiments/src/css/noncritical.css
body {
  position: fixed;
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
  margin: 0px;
}
.CodeMirror, #editor {
  height: 100%;
  width: 100%;
}
.CodeMirror {
  overflow: auto;
}

.CodeMirror-content {
  box-sizing: border-box;
  line-height: inherit;
  font-family: inherit;
  padding: 4px 2px 4px 4px;
  outline: none;
}

.CodeMirror-gutter {
  display: flex; /* Necessary -- prevents margin collapsing */
  flex-direction: column;
}

.CodeMirror-gutter-element {
  white-space: nowrap;
  box-sizing: border-box;
  padding: 0 3px 0 5px;
  min-width: 20px;
  text-align: right;
}

.CodeMirror-tab {
  display: inline-block;
  overflow: hidden;
  vertical-align: bottom;
}

